[package]
name = "block-rust-chain"
version = "0.1.0"
authors = ["Lucas Boscaini <lucasboscaini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
rust-crypto = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
